--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section id="banner" class="major colour">
 						<div class="inner">
 							<header class="major">
-								<h1>Good night, Jason!</h1>
+								<h1>Hello, Jason! Having a good day?</h1>
 							</header>
 							<div class="content">
 								<i class="wi wi-night-alt-cloudy"></i>
@@ -42,20 +42,20 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/steamOS.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Steam Games</a></h3>
+										<p>Browse Steam games &amp; launch them from here.</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/food_alt.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Recipes</a></h3>
+										<p>A catalouge of easy, healthy recipes. Find, make, eat, easy.</p>
 									</header>
 								</article>
 								<article>
@@ -63,8 +63,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">PLEX</a></h3>
+										<p>Launch PLEX media server and open player.</p>
 									</header>
 								</article>
 								<article>
@@ -72,8 +72,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Placeholder</a></h3>
+										<p>For other things...</p>
 									</header>
 								</article>
 								<article>
@@ -202,7 +202,7 @@ else if (hours > 6 && hours < 12){
 }
 
 else if (hours > 12 && hours < 18){
-	$('.colour').css({'background': 'linear-gradient(to top, #141E30 0%, #243B55 100%)'});
+	$('.colour').css({'background': 'linear-gradient(to top, #56CCF2 0%, #2F80ED 99%, #56CCF2 100%)'});
 }
 
 else if (hours > 18 && hours < 21){
