--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section id="banner" class="major colour">
 						<div class="inner">
 							<header class="major">
-								<h1 id="greeting">[dynamic greeting], Jason! [other]</h1>
+								<h1 id="greeting">[dynamic greeting], [name] [other]</h1>
 							</header>
 							<div class="content">
 								<i class="wi wi-night-alt-cloudy"></i>
@@ -94,20 +94,6 @@
 									</header>
 								</article>
 							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
-
 					</div>
 
 				<!-- Contact -->
@@ -172,7 +158,7 @@
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Liveware 2017</li>
 							</ul>
 						</div>
 					</footer>
