Added stock images & CSS changes

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/steamOS.jpg" alt="" />
+										<img src="images/plex_alt.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Steam Games</a></h3>
-										<p>Browse Steam games &amp; launch them from here.</p>
+										<h3><a href="http://app.plex.tv/desktop" class="link">PLEX</a></h3>
+										<p>Plexflix and chill.</p>
 									</header>
 								</article>
 								<article>
@@ -59,38 +59,20 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/wwall.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">PLEX</a></h3>
-										<p>Launch PLEX media server and open player.</p>
+										<h3><a href="landing.html" class="link">Wallpapers</a></h3>
+										<p>Give your desktop a makeover!</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/steamos.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Placeholder</a></h3>
-										<p>For other things...</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Steam</a></h3>
+										<p>Browse and play games!</p>
 									</header>
 								</article>
 							</section>
