--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/wwall.jpg" alt="" />
+										<img src="images/wwall2.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Wallpapers</a></h3>
