Added date/time functions and photo backgrounds

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/custom.css" />
 	</head>
 	<body>
 
@@ -26,7 +25,7 @@
 							<div class="content">
 								<i class="wi wi-night-alt-cloudy"></i>
 								<p>It is currently 2°C and partly cloudy,<br />
-								the time is <strong>1:29AM</strong> on October 22nd.</p>
+								the time is <span id="time">[time]</span> on <span id="date">[date]</span>.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -59,7 +58,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/wwall2.jpg" alt="" />
+										<img src="images/wwall.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Wallpapers</a></h3>
@@ -155,6 +154,6 @@
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<script src="assets/js/landing.js"></script>
+		<script src="assets/js/custom.js"></script>
 	</body>
 </html>
