CSS tweaks, logo edit, and JS changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Welcome, Jason!</title>
+		<title>[dynamic greeting], [name]</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><span>A </span><strong>Liveware</strong> project</a>
+						<a href="index.html" class="logo"><span id="hidelogo">A </span><strong>Liveware</strong> <span id="hidelogo">project</span></a>
 					</header>
 
 				<!-- Banner -->
@@ -58,7 +58,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/wwall.jpg" alt="" />
+										<img src="images/wwall2.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Wallpapers</a></h3>
