Deleted WIP and unused files and made minor CSS changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<img src="images/titles/food.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Recipes</a></h3>
+										<h3><a href="recipes/recipes.html" class="link">Recipes</a></h3>
 										<p>A catalouge of healthy recipes. Make, eat, easy.</p>
 									</header>
 								</article>
