Added Potato-Kale-Bacon-Hash recipe
Mmmmmm

--- a/recipes/potato-kale-bacon-hash.html
+++ b/recipes/potato-kale-bacon-hash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>[TITLE]</title>
+		<title>Potato Bacon Kale Hash</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/recipes.css" />
@@ -32,35 +32,31 @@
 									<tbody>
 									<tr>
 									<td>Small sweet potato</td>
+									<td>1 (small cubes)</td>
+									</tr>
+									<tr>
+									<td>Bacon</td>
+									<td>3 slices (nicely chopped)</td>
+									</tr>
+									<tr>
+									<td>Sea salt</td>
+									<td>generous pinch</td>
+									</tr>
+									<tr>
+									<td>Paprika</td>
+									<td>generous pinch</td>
+									</tr>
+									<tr>
+									<td>Kale</td>
+									<td>handful (roughly chopped)</td>
+									</tr>
+									<tr>
+									<td>Egg</td>
 									<td>1</td>
 									</tr>
 									<tr>
-									<td>Lemon zest</td>
-									<td>1 teaspoon</td>
-									</tr>
-									<tr>
-									<td>Juice of lemons</td>
-									<td>1 1/2</td>
-									</tr>
-									<tr>
-									<td>Dijon mustard</td>
-									<td>1 teaspoon</td>
-									</tr>
-									<tr>
-									<td>Chopped Dill</td>
-									<td>2 tablespoons</td>
-									</tr>
-									<tr>
-									<td>Rotisserie chicken</td>
-									<td>3 cups (shredded)</td>
-									</tr>
-									<tr>
-									<td>Red grapes</td>
-									<td>1 cup (quartered)</td>
-									</tr>
-									<tr>
-									<td>Chopped pecans</td>
-									<td>1/2 cup</td>
+									<td>Green onion</td>
+									<td>Thinly sliced (for garnish)</td>
 									</tr>
 									</tbody>
 									</table>
@@ -70,9 +66,13 @@
 						<br />
 						<h3 id="scolor">Directions</h3>
 						<ol>
-								<li>In a large bowl, mix together Greek yogurt, lemon zest and juice, mustard, and dill, and season with salt and pepper.</li>
-								<li>Stir in chicken, grapes, pecans, and green onions and season with salt and pepper.</li>
-								<li>Spoon chicken salad into lettuce leaves, garnish with dill, and serve.</li>
+								<li>Heat well seasoned cast iron skillet (or other non-stick heavy skillet) over medium heat, and add the bacon pieces.</li>
+								<li>Allow the bacon to cook just long enough to render some fat, then add the chopped sweet potatoes to the pan and stir to coat with the fat. Sprinkle on a pinch of salt along with the smoked paprika if you're using it.
+								<br/>Cover the pan with any cover to allow the potatoes to fry and steam at the same time (perfect fit not necessary)</li>
+								<li>Cook for about one-two minutes covered, then uncover and stir to prevent burning. Adjust the heat if necessary, then cover again and cook until the bacon and potatoes are browning and the potatoes are getting soft.</li>
+								<li>Uncover the skillet and add the chopped kale, stir to coat the kale with bacon fat, add a pinch of salt then recover to allow the kale to cook.</li>
+								<li>While the hash is cooking, you can fry or scramble your egg in a separate pan to serve alongside the hash. You can use rendered bacon fat for this or another cooking fat of choice.</li>
+								<li>Once the bacon, potatoes and kale are cooked to preference, stir once again and then transfer to a plate to serve! Top with your cooked egg and garnish with green onion and additional salt and pepper if desired for a final touch. <br/><br/>Enjoy!</li>
 						</ol>					
 						</div>
 					</div>
