--- a/recipes/chicken-salad-lettuce-wraps.html
+++ b/recipes/chicken-salad-lettuce-wraps.html
@@ -19,7 +19,7 @@
 							<span class="6u">
 									<h3 id="scolor">Information</h3>
 									<ul class="alt">
-											<li class="">TOTAL TIME: <span id="infoblck">0:15</span> PREP TIME: <span id="infoblck">0:15</span> LEVEL: <span id="infoblck">EASY</span> SERVINGS: <span id="infoblck">4</span></li>
+											<li class="">TOTAL TIME: <span id="infoblck">0:15</span> PREP TIME: <span id="infoblck">0:15</span> COOK TIME: <span id="infoblck">0</span> SERVINGS: <span id="infoblck">4</span></li>
 										</ul>
 									<div class="table-wrapper">
 									<table>
